# modding-essential

./: GEMINI.md  README.md
getting-started/: README.md  memory-patching-guide.md  memory-scanning-guide.md  safe-development-guide.md  safety-guidelines.md  tools-setup.md
projects/: README.md
projects/game-overlay/: CMakeLists.txt  D3D11Hook.cpp  D3D11Hook.h  GameOverlay.cpp  GameOverlay.h  main.cpp
projects/mod-framework/: CMakeLists.txt  EventManager.cpp  EventManager.h  IMod.h  Main.cpp  ModLoader.cpp  ModLoader.h
projects/simple-trainer/: CMakeLists.txt  Main.cpp  Trainer.cpp  Trainer.h
reference/: README.md  assembly-quick-reference.md  modding-approaches.md  unreal-engine-modding.md
resources/: README.md  code-template.cpp  memory-scanner.cpp  pattern-database.md
scenario-01-pause-game/: README.md
scenario-01-pause-game/example-code/: analysis.md
scenario-01-pause-game/exercises/solutions/: README.md  exercise1_fps_reader.cpp  exercise4_safe_memory.cpp
scenario-02-unlock-fps/: README.md
scenario-02-unlock-fps/example-code/: FPSUnlocker.cpp  README.md
scenario-02-unlock-fps/exercises/solutions/: README.md  exercise2_dynamic_address.cpp
scenario-03-visual-effects/: README.md
scenario-03-visual-effects/example-code/: D3D11Hook.cpp  D3D11Hook.h  README.md  VisualEffects.cpp  main.cpp
scenario-03-visual-effects/exercises/solutions/: README.md  exercise4_shader_replacement.cpp  exercise5_postprocess.cpp
scenario-04-camera-system/: README.md
scenario-04-camera-system/example-code/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  README.md
scenario-04-camera-system/exercises/solutions/: README.md  exercise1_camera_scanner.cpp  exercise2_free_camera.cpp  exercise3_fov_control.cpp
scenario-05-mod-loader/: README.md
scenario-05-mod-loader/example-code/: CMakeLists.txt  ModLoader.cpp  ModLoader.h  README.md  main.cpp
scenario-05-mod-loader/exercises/solutions/: README.md
scenario-06-advanced-techniques/: README.md
scenario-06-advanced-techniques/exercises/solutions/: README.md  exercise1_anti_debug_bypass.cpp  exercise4_unpacking.cpp  exercise5_deobfuscation.cpp
scenario-07-pak-modding/: README.md
scenario-07-pak-modding/example-code/: README.md
scenario-08-fromsoftware-modding/: README.md
scenario-08-fromsoftware-modding/example-code/: README.md
scenario-09-pak-loader/: README.md
scenario-09-pak-loader/example-code/: PakLoaderExample.cpp  README.md
scenario-10-monster-battle/: README.md
scenario-10-monster-battle/example-code/: README.md
scenario-11-memory-manipulation-examples/: README.md
scenario-11-memory-manipulation-examples/cpp-example/: README.md  main.cpp
scenario-11-memory-manipulation-examples/python-example/: README.md  main.py
scenario-advanced-techniques/: README.md
scenario-advanced-techniques/exercises/solutions/: README.md  exercise2_code_cave_injection.cpp  exercise3_vm_detection.cpp
scenario-camera-system/: README.md
scenario-camera-system/example-code/: README.md  main.cpp
scenario-camera-system/exercises/solutions/: README.md  exercise4_camera_transition.cpp  exercise5_photo_mode.cpp
scenario-fromsoftware-modding/: README.md
scenario-fromsoftware-modding/example-code/: FromSoftModExample.cpp
scenario-memory-manipulation-examples/: README.md
scenario-memory-manipulation-examples/typescript-example/: README.md  main.ts
scenario-mod-loader/: README.md
scenario-mod-loader/example-code/: ExampleMod.cpp  README.md
scenario-mod-loader/exercises/solutions/: README.md  exercise1_basic_loader.cpp  exercise2_mod_api.cpp  exercise3_config_system.cpp  exercise4_dependency_resolver.cpp  exercise5_hot_reload.cpp
scenario-monster-battle/: README.md
scenario-monster-battle/example-code/: MonsterBattleExample.cpp  README.md
scenario-pak-loader/: README.md
scenario-pak-modding/: README.md
scenario-pak-modding/example-code/: PakModExample.cpp  README.md
scenario-pause-game/: 01-understanding-game-state.md  README.md  typescript-implementation.md
scenario-pause-game/exercises/solutions/: README.md  exercise2_process_pause.cpp  exercise3_hotkey_pause.cpp  exercise5_selective_pause.cpp
scenario-unlock-fps/: README.md
scenario-unlock-fps/example-code/: CMakeLists.txt  FPSUnlocker.h  README.md  main.cpp
scenario-unlock-fps/exercises/solutions/: README.md  exercise1_fps_scanner.cpp  exercise3_safe_fps_change.cpp  exercise4_fps_monitor.cpp  exercise5_fps_presets.cpp
scenario-visual-effects/: README.md
scenario-visual-effects/example-code/: CMakeLists.txt  README.md
scenario-visual-effects/exercises/solutions/: README.md  exercise1_dx_detection.cpp  exercise2_simple_hook.cpp  exercise3_color_filter.cpp
